src/tests/errors/parsing/test02.cmp
program p 
begin  
    var    x :=  4; (* semicolon is a separator, not terminator *)
end  
